description of mapreduce

--- a/content/12_Big-Data-and-Map-Reduce.ipynb
+++ b/content/12_Big-Data-and-Map-Reduce.ipynb
@@ -50,10 +50,105 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MapReduce"
+    "## MapReduce\n",
+    "\n",
+    "The MapReduce paradigm for data the data parallelization to enable BigData processing was [published by Google in 2004](https://doi.org/10.1145/1327452.1327492). The general idea is to describe computations using two different kinds of functions: *map* functions and *reduce* functions. Both functions work with *key-value pair*. Map functions implement the embarrassingly parallel part of algorithms, reduce functions aggregate the results. The concept of map functions and reduce functions is not unique to MapReduce, but a general concept that can be found in many functional programming languages. To enable Big Data, MapReduce introduces a third function, the *shuffle*. The only task of the *shuffle* is to arrange intermediate results, i.e., to facilitate the communication between the map and reduce functions. The following figure gives an overview of the dataflow of MapReduce. \n",
+    "\n",
+    "<img src=\"images/map_reduce_complete.png\" alt=\"Outline of MapReduce\" style=\"width: 600px;\"/>\n",
+    "\n",
+    "### map()\n",
+    "\n",
+    "The map function gets initial key-value pairs. These are, e.g., read from the the distributed storage or the result of a prior computation using MapReduce. The map function than performs a computation on a *single* key-value pair and stores the results in new key-value pairs. Because the map function only gets a single key-value pair as input, data parallelization is trivial: theoretically, the map function could run in parallel for all key-value pairs without any problem. The map function is defined as\n",
+    "\n",
+    "$$map(f_{map}, <key1, value1>) \\rightarrow list(<key2, value2>)$$\n",
+    "\n",
+    "where $f_{map}$ is a *user-defined function* (UDF) defined by the user of the MapReduce framework. The UDF defines the computation, i.e., how the input key-value pair is transformed into the list of output key-value pairs. Depending on the UDF $f_{map}$, the input keys and output keys could be same or different. While the general concept of MapReduce does not have any restrictions on the type and values of the keys, implementations of MapReduce may restrict this. For example, in the initial implementation of MapReduce by Google, all keys and values were strings and users of MapReduce were expected to convert the types within the map and reduce functions, if required.\n",
+    "\n",
+    "### shuffle()\n",
+    "\n",
+    "The key-value pairs computed by the map function are organized by the shuffle function, such that the data is grouped by the key. These are then organized by the shuffle and grouped by their keys. Thus, we have\n",
+    "\n",
+    "$$shuffle(list<key2, value2>) \\rightarrow list(<key2, list(value2)>),$$\n",
+    "\n",
+    "i.e., a list of values per key. Often, these data from shuffle is sorted by key, because this can sometimes improve the efficiency of subsequent tasks. The shuffling is often invisible to the user performed in the background by the MapReduce framework. \n",
+    "\n",
+    "### reduce()\n",
+    "\n",
+    "The reduce function operates on all values for a given key and aggregates the data into a single result per key.  The reduce function is defined as\n",
+    "\n",
+    "$$reduce(f_{reduce}, <key2, list(value2)>) \\rightarrow value3$$\n",
+    "\n",
+    "where $f_{reduce}$ is a UDF. The UDF $f_{reduce}$ performs the reduction to a single value for one key and gets as input the key and the related list of values. Similar as for the map function, there is no restriction on the type or the values that are generated. Depending on the task, the output could, e.g.,  be key value pairs, integers, or textual data. \n",
+    "\n",
+    "### Word Count with MapReduce\n",
+    "\n",
+    "The concept of MapReduce is relatively abstract, unless you are used to functional programming. How MapReduce works becomes clearer with an example. The \"Hello World\" of MapReduce is the word count, i.e., using MapReduce to count how often each word occurs in a text. This example is both practically relevant, e.g., to create a bag-of-words, and well suited to demonstrate how MapReduce works. \n",
+    "\n",
+    "We use the following text as example: \n",
+    "\n",
+    "```\n",
+    "What is your name?\n",
+    "The name is Bond, James Bond.\n",
+    "```\n",
+    "\n",
+    "Our data is stored in a text file with one line per sentence. Our initial keys are the line numbers, our initial values the text in the lines. Thus, we start with these key-value pairs.\n",
+    "\n",
+    "```\n",
+    "<line1, \"What is your name?\">\n",
+    "<line2, \"The name is Bond, James Bond.\">\n",
+    "```\n",
+    "\n",
+    "The map function is defined such that it emits the pair <word, 1> for each word in the input. When we apply this to our input, we get the following list of key-value pairs.\n",
+    "\n",
+    "```\n",
+    "<\"what\", 1>\n",
+    "<\"is\", 1>\n",
+    "<\"your\", 1>\n",
+    "<\"name\", 1>\n",
+    "<\"the\", 1>\n",
+    "<\"name\", 1>\n",
+    "<\"is\", 1>\n",
+    "<\"bond\", 1>\n",
+    "<\"james\", 1>\n",
+    "<\"bond\", 1>\n",
+    "```\n",
+    "\n",
+    "The shuffle then groups the values by their keys, such that all values for the same key are in a list.\n",
+    "```\n",
+    "<\"bond\", list(1, 1)>\n",
+    "<\"is\", list(1, 1)>\n",
+    "<\"james\", list(1)>\n",
+    "<\"name\", list(1, 1)>\n",
+    "<\"the\", list(1)>\n",
+    "<\"what\", list(1)>\n",
+    "<\"your\", list(1)>\n",
+    "```\n",
+    "\n",
+    "As reduce function, we output one line for each key. The lines contain the current key and the sum of the values of that key.\n",
+    "\n",
+    "```\n",
+    "bond 2\n",
+    "is 1\n",
+    "james 1\n",
+    "name 2\n",
+    "the 1\n",
+    "what 1\n",
+    "your 1\n",
+    "```\n",
+    "\n",
+    "### Parallelization\n",
+    "\n",
+    "The design of MapReduce enables parallelization for every step of the computational process. The input can be read in chunks to parallelize the creation of the initial key-value pairs. For example, we could have multiple text files, each with 1000 lines that could be processed in parallel. The parallelism is limited by the throughput of the storage and makes more sense, if the data is distributed across multiple physical machines. \n",
+    "\n",
+    "map() can be applied to each key-value pair independently and the potential for parallelism is only limited by the amount of data. \n",
+    "\n",
+    "shuffle() can start as soon as the first key-value pair is processed by the map function. This reduces the waiting times, such that the shuffling is often finished directly after the last computations for map are finished.\n",
+    "\n",
+    "reduce() can run in parallel for different keys. Thus, the parallelism is only limited by the number of unique keys created by map(). Moreover, reduce() can already start, once all results for a key are available. This is where sorting by shuffle can help. If the results passed to reduce() are sorted, reduce can start processing for a key, once it sees results for the next key. "
    ]
   },
   {
