hadoop, hdfs, figures, and code

--- a/content/12_Big-Data-and-Map-Reduce.ipynb
+++ b/content/12_Big-Data-and-Map-Reduce.ipynb
@@ -155,7 +155,128 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Apache Hadoop"
+    "## Apache Hadoop\n",
+    "\n",
+    "[Apache Hadoop](https://hadoop.apache.org/) is an open source implementation of MapReduce. For many years, Hadoop was the standard solution for any MapReduce application and Hadoop is still relevant for many applications. All major cloud providers offer Hadoop clusters in their portfolio. Hadoop 2.0 implements MapReduce in an architecture with three layers. \n",
+    "\n",
+    "<img src=\"images/hadoop_architecture.png\" alt=\"Outline of MapReduce\" style=\"width: 400px;\"/>\n",
+    "\n",
+    "The lowest layer is the *Hadoop Distributed File System* (HDFS) that is in charge of the data management. *Yet Another Resource Negotiator* (YARN) is running on top of the file system. YARN manages the use of computational resources within a Hadoop cluster. Applications for data processing that want to use the Hadoop cluster are running on top of YARN. For example, such applications can be written with the Hadoop implmentation of MapReduce. However, due to the success of the HDFS and YARN, there are also other technologies that can be used for data processing, e.g., [Apache Spark](#Apache-Spark), which we discuss below. \n",
+    "\n",
+    "### HDFS\n",
+    "\n",
+    "The HDFS is the core of Hadoop. All data that should be analyzed is stored in the HDFS. HDFS was designed with the goal to enable Big Data processing, which is why HDFS behave quite differently from other file systems that we regularly use like NTFS, ext3, or xfs. \n",
+    "\n",
+    "- HDFS favors high throughput at the cost of low latency. This means that loading and storing large amounts of data is fast, but you may have to wait some time before the operation starts. \n",
+    "- HDFS supports extremely large files. The file size is only limited by the amount of *distributed* storage, i.e., files can be large than the storage available at a single node. \n",
+    "- HDFS is designed to support data local computations and minimize the data that needs to be send around in a cluster for file operations.\n",
+    "- Since outages of single nodes in a large compute cluster is not a rare event, but rather a part of the daily work, HDFS is designed to be resilient against hardware failures, such that there is no loss of data and no interruption of service. \n",
+    "\n",
+    "In principle, HDFS uses a master/worker paradigm with a *NameNode* that manages *DataNodes*. \n",
+    "\n",
+    "<img src=\"images/hadoop_hdfs.png\" alt=\"Outline of MapReduce\" style=\"width: 600px;\"/>\n",
+    "\n",
+    "Clients access the HDFS via the NameNode. All file system operations, such as the creating, deletion, copying of a file is performed by requesting this at the NameNode. Whenever a file is created, it is split into smaller blocks. The NameNode organizes the creation, deletion, and replication of *blocks* on DataNodes. Replication means that each block is not just stored on a single DataNode, but on multiple DataNodes. This ensures that no data is lost, if a data node is lost. To avoid that the HDFS is not available if the NameNode crashes, there can also be a secondary NameNode. This avoids that the NameNode is a single point of failure. If there is a problem with the primary NameNode, the secondary NameNode can take over without loss of service. \n",
+    "\n",
+    "Another important aspect of the HDFS is that while users access the HDFS via the NameNode, the actual data is never send via the NameNode to the DataNodes, but directly from the users to the DataNodes. The following figure shows how a file in HDFS is created by a user. \n",
+    "\n",
+    "<img src=\"images/hadoop_writefile.png\" alt=\"Outline of MapReduce\" style=\"width: 700px;\"/>\n",
+    "\n",
+    "1. The user contacts the NameNode with the request to create a new file. \n",
+    "2. The name node responds with a data stream that can be used for writing the file. From the users perspective, this is a normal file stream that would be used for local data access (e.g., `FileInputStream` in Java, `ifstream` in C++, `open` in Python).\n",
+    "3. The user writes the contents of the file to the file stream. The NameNode configured the file stream with the information how the blocks should look like and where the data should be send. The data is directly send block-wise to one of the DataNodes. \n",
+    "4. The DataNode that receives the block does not necesarily store the block itself. Instead, the block may be forwarded to other DataNodes for storage. Each block is stored at different nodes and the number of these nodes is defined by the *replication level*. Moreover, the HDFS ensures that blocks are evenly distributed among the data nodes, i.e., a DataNode only stores multiple blocks of a file, if the block cannot be stored at another DataNode. Ideally, all DataNodes store the same amount of blocks of a file.\n",
+    "5. When a DataNode stores a block, this is acknowledged to the DataNode that receives the data from the user.\n",
+    "6. Once the DataNode received acknowledgements for all replications of a block, the DataNode acknowledges to the user that the block is stored. The user can then start sending the data for the next block (goto step 3), until all blocks are written. The user does not observe this behavior directly, because this is automatically handled by the file stream. \n",
+    "7. The user informs the NameNode that the writing finished and closes the file stream.\n",
+    "\n",
+    "### YARN\n",
+    "\n",
+    "<img src=\"images/hadoop_yarn.png\" alt=\"Outline of MapReduce\" style=\"width: 600px;\"/>\n",
+    "\n",
+    "<img src=\"images/hadoop_execution.png\" alt=\"Outline of MapReduce\" style=\"width: 600px;\"/>\n",
+    "\n",
+    "### MapReduce with Hadoop\n",
+    "\n",
+    "```java\n",
+    "public static class TokenizerMapper extends Mapper<Object, Text, Text, IntWritable> {\n",
+    "    private final static IntWritable one = new IntWritable(1);\n",
+    "    private Text word = new Text();\n",
+    "    \n",
+    "    public void map(Object key, Text value, Context context\n",
+    "                   ) throws IOException, InterruptedException {\n",
+    "        // text into tokens\n",
+    "        StringTokenizer itr = new StringTokenizer(value.toString());\n",
+    "        while (its.hasMoreTokens()) {\n",
+    "            // add an output pair <word, 1> for each token\n",
+    "            word.set(itr.nextToken());\n",
+    "            context.write(word, one);\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "```java\n",
+    "public static class IntSumReader extends Reducer<Text, IntWritable, Text, IntWritable> {\n",
+    "    private IntWritable result = new IntWritable();\n",
+    "    \n",
+    "    public void reduce(Text key, Iterable<IntWritable> values, Context context\n",
+    "                       ) throws IOException, InterruptedException {\n",
+    "        // calculate sum of word counts\n",
+    "        int sum = 0;\n",
+    "        for (IntWritable val : values) {\n",
+    "            sum += val.get();\n",
+    "        }\n",
+    "        result.set(sum);\n",
+    "        // write result\n",
+    "        context.write(key, result);\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "```java\n",
+    "public class WordCount {\n",
+    "    public static void main(String[] args) throws Exception {\n",
+    "        // Hadoop configuration\n",
+    "        Configuration conf = new Configuration();\n",
+    "        \n",
+    "        // Create a Job with the name \"word count\"\n",
+    "        Job job = Job.getInstance(conf, \"word count\");\n",
+    "        job.setJahrByClass(WordCount.class);\n",
+    "        \n",
+    "        // set mapper, reducer, and output types\n",
+    "        job.setMapperClass(TokenizerMapper.class);\n",
+    "        job.setReduczer(IntSumReducer.class);\n",
+    "        job.setOutputKeyClass(Text.class);\n",
+    "        job.setOutputValueClass(IntWritable.class);\n",
+    "        \n",
+    "        // specify input and output files\n",
+    "        FileInputFormat.addInputPath(job, new Path(args[0]));\n",
+    "        FileOutputFormat.setOutputPath(job, new Path(args[1]));\n",
+    "        \n",
+    "        // run job and wait for completion\n",
+    "        job.waitForCompletion(true);\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "### Word Count with Hadoop\n",
+    "\n",
+    "<img src=\"images/hadoop_wordcount_1.png\" alt=\"Hadoop Word Count (1)\" style=\"width: 600px;\"/>\n",
+    "\n",
+    "<img src=\"images/hadoop_wordcount_2.png\" alt=\"Hadoop Word Count (2)\" style=\"width: 600px;\"/>\n",
+    "\n",
+    "<img src=\"images/hadoop_wordcount_3.png\" alt=\"Hadoop Word Count (3)\" style=\"width: 600px;\"/>\n",
+    "\n",
+    "<img src=\"images/hadoop_wordcount_4.png\" alt=\"Hadoop Word Count (4)\" style=\"width: 600px;\"/>\n",
+    "\n",
+    "<img src=\"images/hadoop_wordcount_5.png\" alt=\"Hadoop Word Count (5)\" style=\"width: 600px;\"/>\n",
+    "\n",
+    "<img src=\"images/hadoop_wordcount_6.png\" alt=\"Hadoop Word Count (6)\" style=\"width: 600px;\"/>\n",
+    "\n",
+    "### Streaming Mode\n",
+    "\n",
+    "### Additional Components"
    ]
   },
   {
