description of yarn

--- a/content/12_Big-Data-and-Map-Reduce.ipynb
+++ b/content/12_Big-Data-and-Map-Reduce.ipynb
@@ -192,9 +192,31 @@
     "\n",
     "### YARN\n",
     "\n",
+    "The second core component of Hadoop is YARN, which is manager for computational resources that is designed to enable distributed Big Data computations with data stored in the HDFS. Same as the HDFS, YARN has a master/worker paradigm.\n",
+    "\n",
     "<img src=\"images/hadoop_yarn.png\" alt=\"Outline of MapReduce\" style=\"width: 600px;\"/>\n",
     "\n",
+    "The *Resource Manager* is the scheduler that provides resources for applications to enable the computations. The *NodeManagers* are applications running on the DataNodes. The NodeManager execute tasks on the local resources. This way, each DataNode can serve as compute node. The computational tasks are allocated such that they are executed by the NodeManagers running on the DataNodes where the required data is stored. Thus, the combination of DataNodes and NodeManagers running on the same physical machine and the Resource Manager that is aware where the data is stored in the HDFS enables data local computations. The computational tasks are, e.g., executed using MapReduce. However, YARN can in principle run any kind of computational task on the NodeManagers and is not limited to MapReduce. \n",
+    "\n",
+    "The Resource Manager should schedule the computational task such that the resources (CPU cores, memory) are spent efficiently. This means that NodeManagers should ideally only execute one task at a time, to prevent overutilization. Underutilization should also be avoided: if there are jobs waiting for their execution and at the same time, there are idle NodeManagers that could conduct the jobs, the jobs should get these resources. This means that the Resource Manager should must be able to provide resources to multiple jobs, possibly of multiple users, at the same time. \n",
+    "\n",
+    "The following figure shows how YARN executes application in a distributed manner and schedules resources. \n",
+    "\n",
     "<img src=\"images/hadoop_execution.png\" alt=\"Outline of MapReduce\" style=\"width: 600px;\"/>\n",
+    "\n",
+    "1. The user submits an application to the Resource Manager. The Resource Manager queues this applications until it determines that there are sufficient capacities in the compute cluster to start the execution.\n",
+    "2. The Resource Manager allocates a *container* on one of the NodeManagers and launches the *application master*. The application master is not the application itself, but rather a generic program that knows how to execute the application, e.g., which resources are required and which tasks must be executed. \n",
+    "3. The application master requests the resources required for computations from the Resource Manager.\n",
+    "4. The node manager allocates the required containers. In the example, these are two containers running on the NodeManagers on the left and right side. \n",
+    "5. The Resource Manager informations the application master that the required resources are allocated. This information includes the data required to access the containers. \n",
+    "6. The application master executes (parts of) the application in the containers. The application managers may configure the environment through environment variables. The applications are then using local resources of the host where the NodeManager is running, e.g., binary or data from the HDFS. \n",
+    "\n",
+    "Once the application is finished, all containers are destroyed. The results only accessible via the HDFS. The resource requests (step 3) may use the following information to specify the required resources: \n",
+    "\n",
+    "- The required number of containers.\n",
+    "- CPU cores and memory that are required per container. \n",
+    "- The priority of the request. This priority is local to the application and not global. This means that the priority only influences which of the resources a specific application requests it gets first. A higher priority does not give any advantages in scheduling with respect to other applications that are also requesting resources from the Resource Manager. \n",
+    "- It is also possibly to directly specify the name of the desired computational resources. This could either be a specific host of NameNode, but also a more generic property of the topography of the compute cluster, e.g., in which rack the host should be located. \n",
     "\n",
     "### MapReduce with Hadoop\n",
     "\n",
