description of hadoop java mode

--- a/content/12_Big-Data-and-Map-Reduce.ipynb
+++ b/content/12_Big-Data-and-Map-Reduce.ipynb
@@ -50,7 +50,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -220,15 +219,21 @@
     "\n",
     "### MapReduce with Hadoop\n",
     "\n",
+    "Hadoop provides a MapReduce implementation that uses YARN for the execution. In such a MapReduce application, users define sequences of map()/reduce() tasks to solve their problem. The execution is driven by the MRAppMaster Java application. This application specifies a YARN application master that manages the execution of tasks, in this case of the map() and reduce() tasks. Users specify the MapReduce applications through a Java application. Hadoop also has a [streaming mode](streaming-mode) for job execution, which we discuss below. \n",
+    "\n",
+    "The tasks of MapReduce applications are specified through subclassing. Subclasses of the `Mapper` class define map() functions, subclasses of the `Reducer` class define `reduce()`. The code below specifies the map() function for the word count example. Please note that we omit all boilerplate code from the code samples, e.g., import statements. The complete example can be fount in the [official Hadoop documentation](https://hadoop.apache.org/docs/current/hadoop-mapreduce-client/hadoop-mapreduce-client-core/MapReduceTutorial.html#Example:_WordCount_v1.0). \n",
+    "\n",
+    "\n",
     "```java\n",
     "public static class TokenizerMapper extends Mapper<Object, Text, Text, IntWritable> {\n",
     "    private final static IntWritable one = new IntWritable(1);\n",
     "    private Text word = new Text();\n",
     "    \n",
+    "    @Override\n",
     "    public void map(Object key, Text value, Context context\n",
     "                   ) throws IOException, InterruptedException {\n",
     "        // text into tokens\n",
-    "        StringTokenizer itr = new StringTokenizer(value.toString());\n",
+    "        StringTokenizer itr = new StringTokenizer(value.toString().toLowerCase());\n",
     "        while (its.hasMoreTokens()) {\n",
     "            // add an output pair <word, 1> for each token\n",
     "            word.set(itr.nextToken());\n",
@@ -238,10 +243,18 @@
     "}\n",
     "```\n",
     "\n",
+    "The `TokenizerMapper` class extends to generic class `Mapper` with four parameters of types `Object`, `Text`, `Text`, and `IntWritable`. The first two parameters specify the types of the key and value of the input key-value pairs of the map() function, which means we have keys of type `Object` and values of type `Text`. the last two parameters specify the type of output key-value pairs, which means we have keys of type `Text` with values of type `IntWritable`. `Text` and `IntWritable` are data types provided by Hadoop that are similar to their Java counterparts `String` and `Integer`. The key differences between the Hadoop types and the standard Java types are that of the Hadoop types are *mutable*, i.e., the values of objects can be modified, and the Hadoop types are optimized for serialization to improve the efficiency of exchanging key-value pairs between different map() and reduce() tasks. \n",
+    "\n",
+    "The class has two attributes `one` and `word`, which are used to generate the output keys and values. These advantage of having these as attributes is that they are not initialized with every call of map(), which improves the efficiency. Finally, we have map() function, defines how the input key values are mapped to the output pairs. In addition to the input key and value, map() gets the `context`. This context specifies the Hadoop execution environment and contains, e.g., values of environment variables. Moreover, the context receives the output of the map() function through the `context.write()` method. Thus, the map() function does not return values, but continuously writes results for which the computation finished to the context. The context contains the shuffle() function and can immediately start shuffling the output key-value pair, once it was written. Thus, shuffling can already start before the first map() function finished. \n",
+    "\n",
+    "The code below shows the reduce() function for the word count. \n",
+    "\n",
+    "\n",
     "```java\n",
     "public static class IntSumReader extends Reducer<Text, IntWritable, Text, IntWritable> {\n",
     "    private IntWritable result = new IntWritable();\n",
     "    \n",
+    "    @Override\n",
     "    public void reduce(Text key, Iterable<IntWritable> values, Context context\n",
     "                       ) throws IOException, InterruptedException {\n",
     "        // calculate sum of word counts\n",
@@ -255,6 +268,10 @@
     "    }\n",
     "}\n",
     "```\n",
+    "\n",
+    "The `IntSumReader` class extends the generic class `Reducer`. Same as for the `TokenizerMapper`, the parameters describe the types of the input, respectively out, the attribute `result` is used for efficiency, and the result is written to the context. The only notable difference between the classes is that the reduce function gets an `Iterable` of values and not a single values, i.e., all values for the key.\n",
+    "\n",
+    "Finally, we need to use these classes in a MapReduce application. The code for the application is below. \n",
     "\n",
     "```java\n",
     "public class WordCount {\n",
@@ -281,6 +298,8 @@
     "    }\n",
     "}\n",
     "```\n",
+    "\n",
+    "The application is a normal Java application with a main method and the code is more or less self-explanatory. First, we create the configuration of Hadoop application. This object contains, e.g., the context and MapReduce tasks. We use the configuration to create a new MapReduce job. Then, we configure the Job. We define in which class it is defined, which classes are used for the map() and reduce() steps, and what the types of the outputs are. Finally, we specify where the input data come from and where the output should be written, based on the command line arguments of the application. The final line starts the job and blocks further execution, until the job is finished, i.e., all map() and reduce() functions finished their work and the results are available in the file system. \n",
     "\n",
     "### Word Count with Hadoop\n",
     "\n",
