--- a/content/12_Big-Data-and-Map-Reduce.ipynb
+++ b/content/12_Big-Data-and-Map-Reduce.ipynb
@@ -303,21 +303,128 @@
     "\n",
     "### Word Count with Hadoop\n",
     "\n",
+    "Since it is not intuitive how Hadoop/YARN orchestrate the execution of a MapReduce application, we now demonstrate this in detail step by step using the word count example. \n",
+    "\n",
     "<img src=\"images/hadoop_wordcount_1.png\" alt=\"Hadoop Word Count (1)\" style=\"width: 600px;\"/>\n",
+    "\n",
+    "1. The user builds the jar-Archive of the MapReduce application and submits this application to the Resource Manager. \n",
+    "2. The Resource Manager launches the MRAppMaster application master to orchestrate the execution of the WordCount.jar. \n",
     "\n",
     "<img src=\"images/hadoop_wordcount_2.png\" alt=\"Hadoop Word Count (2)\" style=\"width: 600px;\"/>\n",
     "\n",
+    "3. The MRAppMaster evaluates the configuration of the Hadoop application in the WordCount.jar and finds one jobs that consists of a map() and a reduce() function. The MRAppMaster requests the required resources for the map() function from the Resource Manager.\n",
+    "4. The Resource Manager provides the required compute resources. The resources are allocated on the DataNodes, where blocks of the input data are stored, such that this data does not need to be transfered over the network.\n",
+    "5. The Resource Manager sends the information where the map() task can be executed to the MRAppMaster. \n",
+    "6. The MRAppMaster launches the map() function in the containers that were allocated. The required data is directly read from the HDFS.\n",
+    "7. The map() function is executed and the results are written by to intermediary results files in the HDFS. \n",
+    "\n",
     "<img src=\"images/hadoop_wordcount_3.png\" alt=\"Hadoop Word Count (3)\" style=\"width: 600px;\"/>\n",
+    "\n",
+    "8. The MRAppMaster reports that the task is finished and the resources are no longer required to the Resource Manager. \n",
+    "9. The Resource Manager destroys the containers for the map() functions to free the resources.\n",
     "\n",
     "<img src=\"images/hadoop_wordcount_4.png\" alt=\"Hadoop Word Count (4)\" style=\"width: 600px;\"/>\n",
     "\n",
+    "10. The MRAppMaster requests the required resources for the reduce() function. This requires only a single container, because the results are aggregated.\n",
+    "11. The Resource Manager allocates the required resources. \n",
+    "12. The Resource Manager sends the information where the map() task can be executed to the MRAppMaster. \n",
+    "13. The MRAppMaster launches the reduce() function in the allocated container. \n",
+    "14. The MRAppMaster triggers the shuffle() function to organize and group the intermediary data from the different nodes and provide the data to the reduce() function. \n",
+    "15. The reduce() function writes the output to the HDFS. \n",
+    "\n",
     "<img src=\"images/hadoop_wordcount_5.png\" alt=\"Hadoop Word Count (5)\" style=\"width: 600px;\"/>\n",
+    "\n",
+    "16. The MRAppMaster reports that the task and the execution of the application are finished to the Resource Manager. \n",
     "\n",
     "<img src=\"images/hadoop_wordcount_6.png\" alt=\"Hadoop Word Count (6)\" style=\"width: 600px;\"/>\n",
     "\n",
+    "17. The Resource Manager destroys the containers of the reduce() function and the MRAppMaster to free the resources. \n",
+    "\n",
     "### Streaming Mode\n",
     "\n",
-    "### Additional Components"
+    "Hadoop also provides a Java Application that can be used to Hadoop in the *streaming mode*. In the streaming mode, the standard input and standard output are used, similar to Linux pipes. The data from the HDFS is read and forwarded to an arbitrary application that processes the data from the standard input. The results of the computation are written to the standard output. For example, a python script for the map() function of the word count would look like this. \n",
+    "\n",
+    "```python\n",
+    "#!/usr/bin/env python\n",
+    "\"\"\"mapper.py\"\"\"\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "# read from standard input\n",
+    "for line in sys.stdin:\n",
+    "    # split line into words\n",
+    "    words = line.strip().split()\n",
+    "    # create output pairs\n",
+    "    for word in words:\n",
+    "        # print output pairs to standard output\n",
+    "        # key and value are separated by tab (standard for Hadoop)\n",
+    "        print('%s\\t%s' % (word, 1))\n",
+    "```\n",
+    "\n",
+    "Similarly, the reduce() function would also use the standard input and output. \n",
+    "\n",
+    "\n",
+    "```python\n",
+    "!/usr/bin/env python\n",
+    "\"\"\"reducer.py\"\"\"\n",
+    "\n",
+    "from operator import itemgetter\n",
+    "import sys\n",
+    "\n",
+    "# init current word and counter as not existing\n",
+    "current_word = None\n",
+    "current_count = 0\n",
+    "word = None\n",
+    "\n",
+    "# read from standard input\n",
+    "for line in sys.stdin:\n",
+    "    # read output from mapper.py\n",
+    "    word, count = line.strip().split('\\t', 1)\n",
+    "    count = int(count)\n",
+    "    \n",
+    "    # Hadoop shuffle sorts by key\n",
+    "    # -> all values with same key are next to each other\n",
+    "    if current_word==word:\n",
+    "        current_count += count\n",
+    "    else:\n",
+    "        if current_word:\n",
+    "            # write result to standard output\n",
+    "            print('%s\\t%s' % (current_word, current_count))\n",
+    "        # reset counter and update current word\n",
+    "        current_count = count\n",
+    "        word = word\n",
+    "# output for last word\n",
+    "if current_word==word:\n",
+    "    print('%s\\t%s' % (current_word, current_count))\n",
+    "```\n",
+    "\n",
+    "The streaming mode can be used with any programming language, as long as inputs are read from the standard input and outputs are written to the standard output stream. Technically, the streaming mode is just a Hadoop MapReduce implementation that is bundled as a jar-Archive and can be used. For example, the following command could be used to run the word count.\n",
+    "\n",
+    "```\n",
+    "hadoop jar hadoop-streaming.jar \\\n",
+    "  - input myInputDirs \\\n",
+    "  - output my OutputDir \\\n",
+    "  - mapper mapper.py \\\n",
+    "  - reducer reducer.py \\\n",
+    "  - file mapper.py \\\n",
+    "  - file reducer.py\n",
+    "```\n",
+    "\n",
+    "The hadoop-streaming.jar is a normal MapReduce implementation of MapReduce in Java, as we have it explained above. The map() function of this jar calls the mapper.py within its map() function and the reducer.py within its reduce function() and communicates with the python scripts via the standard input/output. The input and output parameters define where the data is read from and where the results will be written to in the HDFS. The final two parameters are required, to make the Python scripts available on the compute nodes. \n",
+    "\n",
+    "### Additional Components\n",
+    "\n",
+    "In addition to the core components we have shown above, there are several other components, that we do not discuss in detail, but want to mention regardless. We briefly want to discuss two of these additional components. \n",
+    "\n",
+    "*Combiner* functions are similar to reduce() function, but are running locally on each DataNode and are executed before shuffling the data to another node. In many use cases, the combiners are identical to reduce(). In the word count example, we can apply reduce() multiple times in a row without problems, since the reducer function creates the sum of the values of the keys. Without a combiner, these values will always be exactly one. With a combiner, we would create a word count locally on each DataNode, then shuffle the word counts of the nodes to reduce() function, that would create the total word count from the word counts on each DataNode. Combiners can, therefore, reduce the traffic between nodes by aggregating results prior to the reduce() function. For example, we would shuffle one pair <bond, 2> instead of two pairs <bond, 1> to the reducer, thereby cutting the traffic in half. The larger the amount of data that is handled locally at each node in the Hadoop cluster, the larger the potential for reducing the traffic with a combiner. The requirement for chaining functions this way is that the functions are *idempotent*. \n",
+    "\n",
+    "The *MapReduce Job History Server* is another user-facing component of a Hadoop deployment. Users of a Hadoop cluster can access the Job History Server to access information about submitted Hadoop application. This information includes log files of the job execution, start and end times, as well as the state of the job, e.g., whether it it pending, running, finished, or failing. \n",
+    "\n",
+    "### Limitations\n",
+    "\n",
+    "Hadoop has two major limitations. The first is that if an algorithm requires multiple map() and/or reduce() functions, their order of execution must be manually specified through the creation of `Job` objects and through the definition of their dependencies. This means that we cannot just add multiple map() or reduce() jobs in a specific order to a Job object, but instead have to define multiple Job objects, specify which Job object needs to wait for which other objects, to which Job object the output of a Job object should possibly be forwarded as input, etc. This manual modeling of dependencies is error prone and mistakes are hard to spot. \n",
+    "\n",
+    "Related to this limitation is the the jobs always have to write their intermediary results to the HDFS. While this is not a problem is the data only needs to be read and processed once, this is severe overhead if multiple computations on the same data are performed, because the results are not kept in-memory. Thus, iterative algorithms are not very efficient with Hadoop. "
    ]
   },
   {
