--- a/content/12_Big-Data-and-Map-Reduce.ipynb
+++ b/content/12_Big-Data-and-Map-Reduce.ipynb
@@ -365,7 +365,7 @@
     "\n",
     "\n",
     "```python\n",
-    "!/usr/bin/env python\n",
+    "#!/usr/bin/env python\n",
     "\"\"\"reducer.py\"\"\"\n",
     "\n",
     "from operator import itemgetter\n",
@@ -431,7 +431,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Apache Spark"
+    "## Apache Spark\n",
+    "\n",
+    "Apache Spark is another framework for working with Big Data that was created with the motivation to overcome the limitations of Hadoop: in memory data analysis, such that intermediary results do not have to be written to the HDFS and the convenient support for complex algorithms with many map() and reduce() functions. \n",
+    "\n",
+    "### Components\n",
+    "\n",
+    "The first difference of Spark in comparison to Hadoop is that Spark contains a powerful software stack for data analysis, while Hadoop only provides basic functionality, which is often used by other software to provide these functions. Apache Spark consists of core components that are responsible for the Big Data processing. On top of these functionality, Spark provides libraries that simplify the definition of data analysis tasks. \n",
+    "\n",
+    "<img src=\"images/spark_architecture.png\" alt=\"Components of Apache Spark\" style=\"width: 400px;\"/>\n",
+    "\n",
+    "*Spark SQL* suppers SQL-like queries to the data that is used within analysis. Because SQL is such a widespread language for working with data, this allows users to load and manipulate data with Apache Spark without a steep learning curve. *Spark Streaming* enables the live processing of *streaming data*. This way, Spark can handle continously incoming data, which is another limitation of Hadoop. With the MLlib and GraphX, Spark also contains two libraries for data analysis. MLlib provides implementations for many of the algorithms we saw in the last chapters. GraphX is for processing of graph data, e.g., social networks. \n",
+    "\n",
+    "### Data Structures\n",
+    "\n",
+    "The data structures of Spark are designed for in-memory data processing, which is in contrast to the HDFS approach by Hadoop where file operations are used. At the core, data is contained in *Resilient Distributed Datasets* (RDDs). These data structures provide an abstraction layer for data operations, independent of the actual type of the data. The RDDs organize data in immutable partitions, such that all elements in a RDD can be processed in parallel. Thus, the RDDs are similar to the key-value pairs of Hadoops MapReduce. Consequently, Spark allows the definition of map() and reduce() functions on RDDs, given that the data within the RDD are key-value pairs. However, Spark goes beyond the capabilities of Hadoop, because RDDs can also contain data that are not key-value pairs, filtering of RDDs is supported and, in general, any user-defined function can be applied to the data within an RDD. Additionally, the RDDs can be persisted to the storage, if requested.\n",
+    "\n",
+    "Since Spark 2.0, users of Apache Spark do not have to work with RDDs anymore, but can also use data frames, similar to the data frames we know from pandas. This data frame API is rightly coupled with the Spark SQL components, which is the primary way for creating the data frames. The support for data frames is another reason why getting started with Spark is often simpler than with other Big Data frameworks. \n",
+    "\n",
+    "### Infrastructure\n",
+    "\n",
+    "While Spark contains all components to create a compute cluster, this is not the normal way in which Spark is used. Instead, Spark is usually used together with one of the many compatible technologies. For example, Spark is fully compatible with YARN and HDFS, i.e., data stored in Hadoop clusters can also be analyzed with Apache Spark. Spark can also be used with many other technologies, e.g., EC2 clouds or Kubernetes for computation or databases like Cassandra, HBase, or MongoDB for storage. Thus, analysis designed with Apache Spark are not locked into a specific framework, which is another notable difference to Hadoop. \n",
+    "\n",
+    "### Word Count with Spark\n",
+    "\n",
+    "While Spark itself is written in Scala, Spark applications can also be written in Java, Python (PySpark), and R (SparkR). Users do not have to define the dependencies between different tasks manually. Instead, Spark assumes that the order in which the tasks are defined is the order in which they should be executed. If tasks are using different data, they can be executed in parallel, if a task requires data from a previously defined task, this data is automatically shuffled to the task and the execution only starts when the data is available. Due to this, the source code for Spark jobs contains less boilerplate code for defining formats than that of Hadoop applications. For example, with Apache Spark, the word count my look like this. \n",
+    "\n",
+    "```python\n",
+    "# sc is the SparkContext, which is similar to the Configuration of Hadoop\n",
+    "text_file = sc.textFile(\"hdfs://data.txt\")\n",
+    "# flatMap can input map the input to multiple outputs\n",
+    "# map maps each input to exactly one output\n",
+    "# reduce by key is the same as reduce in Hadoop\n",
+    "counts = text_file.flatMap(lambda line: line.split(\" \")) \\\n",
+    "             .map(lambda word: (word, 1)) \\\n",
+    "             .reduceByKey(lambda a, b: a + b)\n",
+    "counts.saveAsTextFile(\"hdfs://wc.txt\")\n",
+    "```\n",
+    "\n",
+    "Thus, complex tasks can be implemented easier with a framework like Spark. \n",
+    "\n",
+    "> Note:\n",
+    ">\n",
+    "> Python `lambda` functions are anonymous functions that can expressed in one line. For example, `lambda a, b: a+b` would be the same as defining and calling a function\n",
+    ">```python\n",
+    "def fun(a, b):\n",
+    "    return a+b\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Beyond Hadoop and Spark\n",
+    "\n",
+    "With Hadoop and Spark we present to popular technologies for Big Data analysis. However, due to importance of Big Data in the last decade, there are also many other important technologies, e.g., databases that are optimized for Big Data, alternatives for Stream processing of data, or tools for the management of compute clusters. There are whole ecosystems around Hadoop, Spark, and other technologies, that are often to some degree compatible with each other. This tool landscape is still evolving and constantly changing, even though the some core technologies, like Hadoop or Spark for computations, or databases like Cassandra have now been important parts of the market for many years. Regardless, a complete discussion of tools is out of our scope. \n",
+    "\n",
+    "A strong aspect of Big Data is that most of the state of the art technologies are open source, meaning that often there are no licensing costs associated with using the software. Regardless, using these tools is still often not cheap, because the resources for running Big Data applications are expensive. \n",
+    "\n"
    ]
   }
  ],
