fix typos and update preface

--- a/content/00_Preface.ipynb
+++ b/content/00_Preface.ipynb
@@ -63,7 +63,7 @@
     "- Chapter 9: Finished.\n",
     "- Chapter 10: Finished.\n",
     "- Chapter 11: Finished.\n",
-    "- Chapter 12: Work in progress.\n",
+    "- Chapter 12: Draft finished, requires proof reading.\n",
     "- Exercises: Finished.\n",
     "- Solutions: Finished.\n",
     "- Appendix: Work in progress.\n",
